# ITCAA

./: .env.example  .env.test.example  .gitignore  API_GUIDE.md  Bitacora  CI_GUIDE.md  DEPLOY_GUIDE.md  DEV_guide.md  MODULE_GUIDE.md  Makefile  QUALITY_GUIDE.md  README-ai.md  README.md  audit_report.md  auto_update_index.sh  check_structure.py  dockerfile  generate_index_report.py  link_check.sh  main.ai.py  makefile  makefile   mypy.ini  predeploy_check.py  pyproject.toml  render.yaml  repair_index.py  requirements-dev.txt  requirements.txt  setup_poetry.sh  start.sh  test_check.sh  test_import.py  validate_ai_dependencies.py  validate_dependencies.py  validate_render_config.py
. devcontainer/: devcontainer.json
.github/workflows/: _install.yml  annual_report.yml  auto-index.yml  build.yml  ci.yml  deploy.yml  deploy_render.yml  docker-ci.yml  full-ci.yml  i18n-check.yml  incremental.yml  model_validation.yml  multilingue.yml  offline-ai.yml  pipeline.yml  predeploy_check.yml  structure-check.yml  tests.yml  tracking_alerts.yml  verify_scripts.yml  weekly_rebuild.yml
apps/api/: econ.models.py  i18n.py  main.py  models.py  models_actors.py
bitacora/: ai-offline-jalons.md
configs/: client_partner_catalog.yml  risk_policies.yml
data/dictionaries/: legitimacy_indicators.yml
data/geo/: countries.geojson
data/i18n/: ar.json  es.json  ru.json  zh.json
data/seeds/: actors_seed.json  criteria_seed.json
docs/: DEPLOYMENT.md  README.md  pipeline_itcaa.md
econ/: config.yml
infra/: compose.yaml  railway.json
infra/docker/: Dockerfile.demo
itcaa_ai_offline/: predictor.py  requirements-ai.txt
models/: requirements-ai.txt
protocols/: legitimacy.yml
scripts/: check_structure.py  repair_index.py  seed_db.py  seed_econ.py  validate_ai_dependencies.py  validate_dependencies.py   validate_render_config.py
src/: __init__.py  init_db.py
src/itcaa_ai_offline/: __init__.py  config.py  health_check.py  index_builder.py  model_loader.py  routers.py  (+5 more)
static/: app.js
templates/: annual_report.html  dashboard.html  email_alert.html  email_report.html  map.html
tests/: test_api.py  test_capsules_api.py  test_config.py  test_corpus.py  test_faiss-meta_coherence.py  test_faiss_index.py  test_index_builder.py  test_index_incremental.py  test_index_report.py  test_init.py  test_init_db.py  test_integration_index.py  test_integration_multilingue.py  test_meta.py  test_model_loader.py  test_multilingue_corpus.py  test_predictor.py  test_shemas.py  test_structure.py  test_utils.py  tests_predictor.py
(+37 files in other folders)
