[tool.poetry]
name = "itcaa"
version = "0.1.0"
description = "Institut Transnational de Certification des Acteurs Armés – Justice digitale et certification DIH"
authors = ["Camille Bombele Liyama <camille@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.9"
shapely = "^2.0.6"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.0"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --disable-warnings --cov=src --cov-report=xml --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
